logs/dag_id=main_dag/run_id=manual__2022-10-01T174446.601515+0000/task_id=create_company_dim_table/attempt=1.log
[2022-10-01 17:46:54,254] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.create_company_dim_table manual__2022-10-01T17:44:46.601515+00:00 [queued]>
[2022-10-01 17:46:54,268] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.create_company_dim_table manual__2022-10-01T17:44:46.601515+00:00 [queued]>
[2022-10-01 17:46:54,268] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-10-01 17:46:54,269] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-10-01 17:46:54,269] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-10-01 17:46:54,288] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_company_dim_table> on 2022-10-01 17:44:46.601515+00:00
[2022-10-01 17:46:54,295] {standard_task_runner.py:52} INFO - Started process 1005 to run task
[2022-10-01 17:46:54,299] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'main_dag', 'create_company_dim_table', 'manual__2022-10-01T17:44:46.601515+00:00', '--job-id', '22', '--raw', '--subdir', 'DAGS_FOLDER/main_dag.py', '--cfg-path', '/tmp/tmpkzsdrmfu', '--error-file', '/tmp/tmpdqoebda1']
[2022-10-01 17:46:54,300] {standard_task_runner.py:80} INFO - Job 22: Subtask create_company_dim_table
[2022-10-01 17:46:54,386] {task_command.py:369} INFO - Running <TaskInstance: main_dag.create_company_dim_table manual__2022-10-01T17:44:46.601515+00:00 [running]> on host 01cada5d86cb
[2022-10-01 17:46:54,504] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=main_dag
AIRFLOW_CTX_TASK_ID=create_company_dim_table
AIRFLOW_CTX_EXECUTION_DATE=2022-10-01T17:44:46.601515+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-10-01T17:44:46.601515+00:00
[2022-10-01 17:46:54,518] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-10-01 17:46:54,524] {dbapi.py:208} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS company_dim_table (
                Company_Full_Name TEXT NOT NULL,
                Last_Price TEXT NOT NULL,
                Shariah TEXT NOT NULL,
                Sectior TEXT NOT NULL,
                Company_Key TEXT NOT NULL,
            );
        , parameters: None
[2022-10-01 17:46:54,526] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:             );
                    ^

[2022-10-01 17:46:54,537] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=main_dag, task_id=create_company_dim_table, execution_date=20221001T174446, start_date=20221001T174654, end_date=20221001T174654
[2022-10-01 17:46:54,555] {standard_task_runner.py:97} ERROR - Failed to execute job 22 for task create_company_dim_table (syntax error at or near ")"
LINE 8:             );
                    ^
; 1005)
[2022-10-01 17:46:54,593] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-10-01 17:46:54,655] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
